# WLEditor

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  build.gradle  build_static.sh  generate_icons.sh  gradle.properties  gradlew  mobile.qrc  wledit.pro
.github/workflows/: build-release.yml  build.yml
android/: AndroidManifest.xml  build.gradle
android/res/values/: strings.xml
android/src/main/java/com/wleditor/app/: MainActivity.java  R.java
desktop/: install.sh  uninstall.sh  wledit.desktop
docs/: ANDROID.md  ANDROID_BUILD_GUIDE.md  ANDROID_BUILD_SUCCESS.md  BUILDING.md  DEVELOPMENT_SETUP.md  INSTALL.md  KEYMAP.md  PROJECT_REQUIREMENTS.md  QUICK_REBUILD.md
gradle/wrapper/: gradle-wrapper.properties
scripts/: build-android-quick.sh  build-android.sh  build-ubuntu.sh
src/: MainWindow.cpp  MainWindow.h  android_main.cpp  main.cpp
test-release/test-release/: test_document.txt  wleditor-v1.2.0-linux-x64
test-release/test-release/scripts/: build-android.sh
